<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="plant"
            type="com.csimcik.gardeningBuddy.models.plantDetail.PlantDetail"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/foliage_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:src="@drawable/leaf_icon"
            android:tint="@color/default_text"
            app:layout_constraintBottom_toTopOf="@id/header_foliage_divider"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/foliage_label"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/foliage"
            android:textSize="@dimen/sm_text"
            app:layout_constraintBottom_toBottomOf="@id/foliage_icon"
            app:layout_constraintStart_toEndOf="@+id/foliage_icon"
            app:layout_constraintTop_toTopOf="@id/foliage_icon" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/images_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/images_icon"
            android:tint="@color/button_color_selector_black_to_light_gray"
            app:layout_constraintBottom_toBottomOf="@id/foliage_icon"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintTop_toTopOf="@id/foliage_icon" />

        <View
            android:id="@+id/header_foliage_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginBottom="@dimen/divider_bottom_margin"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/foliage_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/retention_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/retention"
            android:textSize="@dimen/compartment_text_sz"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@+id/header_foliage_divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/retention_foliage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:textSize="@dimen/compartment_text_sz"
            app:persistence='@{plant.mainSpecies.foliage.leaf_retention}'
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/retention_label"
            app:layout_constraintTop_toBottomOf="@id/header_foliage_divider" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/texture_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/texture"
            android:textSize="@dimen/compartment_text_sz"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toBottomOf="@id/retention_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/texture_foliage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@{plant.mainSpecies.foliage.texture ?? @string/unknown}"
            android:textColor="@{plant.mainSpecies.foliage.texture == null ? @color/mid_gray : @color/default_text}"
            android:style='@{plant.mainSpecies.foliage.texture == null ? "italic" : "normal"}'
            android:textSize="@dimen/compartment_text_sz"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/texture_label"
            app:layout_constraintTop_toBottomOf="@id/retention_label" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/colors_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_vertical"
            android:text="@string/colors"
            android:textSize="@dimen/compartment_text_sz"
            app:layout_constraintBottom_toBottomOf="@id/foliage_color_view"
            app:layout_constraintStart_toStartOf="@id/start_guideline"
            app:layout_constraintTop_toTopOf="@+id/foliage_color_view" />

        <com.csimcik.gardeningBuddy.custom.ui.ColorsView
            android:id="@+id/foliage_color_view"
            android:layout_width="0dp"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="@id/end_guideline"
            app:layout_constraintStart_toEndOf="@id/colors_label"
            app:layout_constraintTop_toBottomOf="@+id/texture_label" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/start_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/end_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guidline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="7dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>